--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <div class="story">
 
-  <div class="fun" id="one">
+  <div class="fun first" id="one">
     <img src="Images/story-1.png" alt="" class="todd">
     <div><button class="btn3">nov 19, 2019</button></div>
     <h3>a fun toddler coloring training on a classroom</h3>
@@ -114,7 +114,7 @@
   </div>
   <div class="fun">
     <img src="Images/story-5.png" alt="" class="todd">
-    <div><button class="btn3">nov 19, 2019</button></div>
+    <div><button class="btn3 btn">nov 19, 2019</button></div>
     <h3>a fun toddler coloring training on a classroom</h3>
   </div>
 
