--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <img src="Images/story-1.png" alt="" class="todd">
     <div><button class="btn3">nov 19, 2019</button></div>
     <h3>a fun toddler coloring training on a classroom</h3>
-    <p class="kin">Kindergarten is a preschool educational approach based on playing, singing, practical activities such as drawing, and social interaction as part of the</p>
+    <p class="kin">Kindergarten is a preschool educational approach based on playing, singing, practical activities as drawing, and social interaction as part of the</p>
   </div>
   <div class="fun">
     <img src="Images/story-2.png" alt="" class="todd">
@@ -120,9 +120,45 @@
 
 </div>
 
+<div class="view"><button class="btn2">View All</button></div>
+
 </section>
 
 </main>
+
+<footer class="foot">
+
+<section class="footer">
+
+<div>
+    <div class="kids">
+        <div><img src="Images/logo.png" alt=""></div>
+        <h1 class="edu">Kids Education</h1>
+    </div>
+    <p class="pre">Kindergarten is a preschool educational approach based on playing, singing, practical such as drawing, and social interaction as part of the</p>
+</div>
+
+<div>
+    <ul class="ul2">
+        <li><strong>About School</strong></li>
+        <li>home</li>
+        <li>about</li>
+        <li>facilities</li>
+        <li>Admission</li>
+    </ul>
+</div>
+
+<div>
+    <h3>Keep in touch</h3>
+    <img src="Images/fb.png" alt="">
+    <img src="Images/dribble.png" alt="">
+    <img src="Images/twitter.png" alt="">
+    <img src="Images/google+.png" alt="">
+</div>
+
+</section>
+
+</footer>
 
 </body>
 </html>
