--- a/index.html
+++ b/index.html
@@ -94,28 +94,38 @@
   <div class="fun first" id="one">
     <img src="Images/story-1.png" alt="" class="todd">
     <div><button class="btn3">nov 19, 2019</button></div>
+    <div class="nov">
     <h3>a fun toddler coloring training on a classroom</h3>
     <p class="kin">Kindergarten is a preschool educational approach based on playing, singing, practical activities as drawing, and social interaction as part of the</p>
+    </div>
   </div>
   <div class="fun">
     <img src="Images/story-2.png" alt="" class="todd">
     <div><button class="btn3">nov 19, 2019</button></div>
+    <div class="nov">
     <h3>a fun toddler coloring training on a classroom</h3>
+    </div>
   </div>
   <div class="fun">
     <img src="Images/story-3.png" alt="" class="todd">
     <div><button class="btn3">nov 19, 2019</button></div>
+    <div class="nov">
     <h3>a fun toddler coloring training on a classroom</h3>
+    </div>
   </div>
   <div class="fun">
     <img src="Images/story-4.png" alt="" class="todd">
     <div><button class="btn3">nov 19, 2019</button></div>
+    <div class="nov">
     <h3>a fun toddler coloring training on a classroom</h3>
+    </div>
   </div>
   <div class="fun">
     <img src="Images/story-5.png" alt="" class="todd">
     <div><button class="btn3 btn">nov 19, 2019</button></div>
+    <div class="nov">
     <h3>a fun toddler coloring training on a classroom</h3>
+    </div>
   </div>
 
 </div>
