--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 </header>
 
 
-<main class="main">
+<main>
     
 <!-- Standard Curriculum -->
 <section class="curriculum">
 
+    <div class="main">
 <h1 class="stan">Standard Curriculum</h1>
 
 <div class="curri">
@@ -93,12 +94,14 @@
 <div class="left"> > </div>
 
    </div>
+</div>
 
 </section>
 
 <!-- Our Stories -->
 <section class="our">
 
+    <div class="main">
     <h1 class="stan">Our Stories</h1>
 
 <div class="story">
@@ -148,6 +151,7 @@
 
 <div class="view"><button class="btn2">View All</button></div>
 
+    </div>
 </section>
 
 </main>
